# dvmobile

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ports.yml
challenges/: 01-idor-profile.md  02-config-leak.md  03-jwt-none.md  04-weak-pin.md  README.md
dvmobile/: __init__.py  challenges.py  cli.py  enrich.py  scoring.py  vulnserver.py
examples/: feeds.txt  help.txt
ports/: README.md  challenges.json
ports/go/: dvmobile.go  dvmobile_test.go  go.mod
ports/node/: dvmobile.test.ts  dvmobile.ts  package.json  tsconfig.json
ports/shell/: dvmobile.sh  test_dvmobile.sh
tests/: test_cli.py  test_cli_extra.py  test_datafeeds.py  test_enrich.py  test_lab.py  test_ports_parity.py  test_vulndb_deep.py  test_vulndb_local.py
