[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dvmobile"
version = "0.1.0"
description = "Damn Vulnerable Mobile lab — an intentionally-insecure mobile backend, documented challenges, and a flag scoreboard for training."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "COCL-1.0" }
authors = [{ name = "Cognis Digital", email = "dev@cognis.digital" }]
keywords = ["security-training", "ctf", "mobile-security", "owasp-masvs", "vulnerable-app", "appsec", "education"]
classifiers = [
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
dvmobile = "dvmobile.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dvmobile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
